Bug 151315 - "ShowOutlineContentVisibilityButton" disrupts assigning character style to portion of text
Summary: "ShowOutlineContentVisibilityButton" disrupts assigning character style to po...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:7.5.0
Keywords: bibisectRequest, regression
Depends on:
Blocks:
 
Reported: 2022-10-03 18:23 UTC by Regina Henschel
Modified: 2022-10-11 17:40 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
File to reprocude the error (13.05 KB, application/vnd.oasis.opendocument.text)
2022-10-03 18:23 UTC, Regina Henschel
Details
screen capture -- selection (triple click) last line applying style from Formating (Styles) toolbar (2.01 MB, video/mp4)
2022-10-04 00:58 UTC, V Stuart Foote
Details
My full registrymodifications.xcu which produces the problem (2.38 MB, application/xml)
2022-10-05 18:29 UTC, Regina Henschel
Details
nearly virgin registrimodifications.xcu, which produces the error (80.34 KB, application/xml)
2022-10-05 19:50 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2022-10-03 18:23:30 UTC
Created attachment 182812 [details]
File to reprocude the error

Open attached file in daily build. It contains three lines of text. The second one has the character style "Emphasis" applied by LibreOffice 7.3. Mark the third line and apply character style "Emphasis". It should look then the same as the second line. But the style is not applied.

I see the error in Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: c3b5eea4304ad6815b491f549fce008a9630c213
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: de-DE (en_US); UI: en-US
Calc: CL threaded

It was OK in Version: 7.3.2.2 (x64) / LibreOffice Community
Build ID: 49f2b1bff42cfccbd8f788c8dc32c1c309559be0
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: de-DE (en_US); UI: en-US
Calc: CL
Comment 1 V Stuart Foote 2022-10-03 21:17:28 UTC
Can not confirm

Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 9063d99ff5ee43cc1239fc1dbb5d9897bdda1c9b
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded

Opening attachment 182812 [details] in Writer

Opening the View -> Toolbars -> Formatting (Styles) toolbar and selecting the 3rd sentence I can apply the Emphasis style to the entire run.  

It matches line 2's rendering of the styles.

I can also apply to the individual words when selected, and I can apply a mix of Emphasis and Strong char styles to the same line.
Comment 2 Rafael Lima 2022-10-04 00:13:44 UTC
If I select the entire 3rd line, then applying the Emphasis character style won't work.

Selecting a few portions of the line work, but not all parts.

Repro with

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 8b5a989dcdcf4edd50c9fdb092d4180432ce4b6a
CPU threads: 12; OS: Linux 5.15; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: CL threaded

NOT REPRO in

Version: 7.4.0.3 / LibreOffice Community
Build ID: f85e47c08ddd19c015c0114a68350214f7066f5a
CPU threads: 12; OS: Linux 5.15; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: threaded
Comment 3 V Stuart Foote 2022-10-04 00:58:06 UTC
Created attachment 182815 [details]
screen capture -- selection (triple click) last line applying style from Formating (Styles) toolbar

hmm, seems to work just fine for me. Selecting the full paragraph (triple mouse click) or just a text run of one of the character modes (western, CTL, CJK) 

Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 9063d99ff5ee43cc1239fc1dbb5d9897bdda1c9b
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 4 raal 2022-10-05 15:54:40 UTC
Cannot confirm Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: a0bc0cc81b597aa81189355a8125753d6b873cce
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 5 Regina Henschel 2022-10-05 18:29:26 UTC
Created attachment 182844 [details]
My full registrymodifications.xcu which produces the problem

As some of you could not reproduce it, I thought it might by something in my user profile. I have investigated the file registrymodifications.xcu

I first thought, that the following entry causes the failure, since when I remove that entry, assigning the "Emphasis" character style works as expected.

<item oor:path="/org.openoffice.Office.Common/Misc"><prop oor:name="SelectedOpenCLDeviceIdentifier" oor:op="fuse"><value>Intel(R) Corporation 7.6.0.716--7.5.0.0--1615875486</value></prop></item>

But that item exists too in a virgin registrymodifications.xcu after first run and assigning the style works with such version of registrymodifications.xcu. So it cannot be the sole reason.

At least it is clear now, that something in my registrymodifications.xcu produces the problem.
Comment 6 Regina Henschel 2022-10-05 19:50:12 UTC
Created attachment 182847 [details]
nearly virgin registrimodifications.xcu, which produces the error

After investigating again, I think I have found the problematic entry:

<item oor:path="/org.openoffice.Office.Writer/Content/Display"><prop oor:name="ShowOutlineContentVisibilityButton" oor:op="fuse"><value>true</value></prop></item>
Comment 7 Regina Henschel 2022-10-05 19:55:40 UTC
If I set the value of ""ShowOutlineContentVisibilityButton" to "false", assigning the style works.

All who have tested, please look in your registrymodifications.xcu whether this entry exists and which value it has.
Comment 8 V Stuart Foote 2022-10-05 20:20:56 UTC
The Writer "ShowOutlineContentVisibilityButton" stanza is set "false" by default in profile.

Confirm that applying the character styles misbehave with it set "true".
Comment 9 Jim Raykowski 2022-10-07 01:19:13 UTC
I am puzzled why I felt it was necessary to do what causes this bug. Details of my puzzlement are included in the commit message of the proposed fix here:
https://gerrit.libreoffice.org/c/core/+/141035
Comment 10 Commit Notification 2022-10-07 06:34:16 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/22757917067d7c4e475228cec2a0dd4d2f900e95

tdf#151315 Fix char style not applied if outline-folding is enabled

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 kocjs 2022-10-11 17:40:15 UTC
It works for me on Debian Bullseye